// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component >>> ItemList ItemList componentWillReceiveProps 1`] = `undefined`;

exports[`Component >>> ItemList ItemList getStatus 1`] = `undefined`;

exports[`Component >>> ItemList ItemList getStatus 2`] = `undefined`;

exports[`Component >>> ItemList ItemList getStatus 3`] = `undefined`;

exports[`Component >>> ItemList ItemList goToCaseInformation 1`] = `undefined`;

exports[`Component >>> ItemList ItemList goToCaseInformation 2`] = `undefined`;

exports[`Component >>> ItemList ItemList goToFormRender 1`] = `undefined`;

exports[`Component >>> ItemList ItemList goToView 1`] = `undefined`;

exports[`Component >>> ItemList ItemList goToView 2`] = `undefined`;

exports[`Component >>> ItemList ItemList goToView 3`] = `undefined`;

exports[`Component >>> ItemList ItemList renderCaseRunOptions 1`] = `undefined`;

exports[`Component >>> ItemList ItemList renderCaseRunOptions 2`] = `undefined`;

exports[`Component >>> ItemList ItemList renderCaseRunOptions 3`] = `undefined`;

exports[`Component >>> ItemList ItemList test _getCapitalLetter 1`] = `undefined`;

exports[`Component >>> ItemList ItemList test _getCapitalLetter 2`] = `undefined`;

exports[`Component >>> ItemList ItemList test _getCapitalLetter 3`] = `undefined`;

exports[`Component >>> ItemList ItemList test _onLoadImage 1`] = `undefined`;

exports[`Component >>> ItemList ItemList test onPress 1`] = `undefined`;

exports[`Component >>> ItemList ItemList test onPress controls 1`] = `undefined`;

exports[`Component >>> ItemList ItemList test onPress controls 2`] = `undefined`;

exports[`Component >>> ItemList Render ItemList 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <CardView>
    <Component
      style={
        Object {
          "backgroundColor": "#FFF",
          "borderRadius": 6,
          "overflow": "hidden",
        }
      }
    >
      <Component
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 8,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "width": "80%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#000",
                "fontSize": 18,
                "fontWeight": "bold",
                "padding": 1,
              }
            }
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#000",
                "fontSize": 16,
              }
            }
          >
             - 
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "gray",
                "fontSize": 12,
              }
            }
          >
            sent_on
            1995-12-25 00:00:00
          </Text>
        </Component>
        <Component
          style={
            Object {
              "alignItems": "flex-end",
              "width": "20%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#2796ea",
                "fontSize": 10,
                "fontWeight": "bold",
                "paddingHorizontal": 3,
                "textAlign": "right",
              }
            }
          >
            0
          </Text>
        </Component>
      </Component>
      <Component
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#f5f5f5",
            "flexDirection": "column",
            "paddingHorizontal": 10,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "paddingTop": 5,
              "width": "100%",
            }
          }
        >
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#1F6CBC",
                    "borderRadius": 100,
                    "height": 36,
                    "justifyContent": "center",
                    "width": 36,
                  },
                ]
              }
            >
              <Image
                onLoad={[Function]}
                source={
                  Object {
                    "uri": "data:image/gif;base64,",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 100,
                      "height": 36,
                      "resizeMode": "cover",
                      "width": 36,
                    },
                    Object {
                      "display": "none",
                    },
                  ]
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "display": "flex",
                  }
                }
              />
            </Component>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#000",
                  "paddingHorizontal": 8,
                  "paddingVertical": 6,
                }
              }
            >
               
            </Text>
          </Component>
          <Component
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 3,
                    "flexDirection": "row",
                    "margin": 1,
                    "padding": 3,
                  },
                  Object {
                    "backgroundColor": "#E14333",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#fff",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  }
                }
              >
                lists_activity_due_date_overdue
              </Text>
            </Component>
          </Component>
        </Component>
        <Component
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "paddingTop": 5,
                "width": "100%",
              },
              Object {
                "paddingTop": 2,
              },
            ]
          }
        >
          <Component
            style={
              Object {
                "alignItems": "center",
                "display": "none",
              }
            }
          >
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingTop": 5,
                }
              }
            >
              <Icon
                allowFontScaling={false}
                name="check-circle"
                size={12}
                style={
                  Object {
                    "color": "#1FBC99",
                    "fontSize": 24,
                  }
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#1FBC99",
                      "justifyContent": "flex-start",
                      "paddingHorizontal": 8,
                      "paddingVertical": 6,
                    },
                    Object {
                      "color": "#1FBC99",
                    },
                  ]
                }
              >
                saved_on_Draft_new_activity_string
              </Text>
            </Component>
          </Component>
          <Component
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Icon
                allowFontScaling={false}
                color="#000"
                name="history"
                size={30}
                style={
                  Object {
                    "paddingLeft": 4,
                  }
                }
              />
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Icon
                allowFontScaling={false}
                color="#000"
                name="sticky-note-o"
                size={30}
                style={
                  Object {
                    "paddingLeft": 4,
                  }
                }
              />
            </TouchableOpacity>
          </Component>
        </Component>
      </Component>
    </Component>
  </CardView>
</TouchableOpacity>
`;

exports[`Component >>> ItemList Render ItemList 2`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <CardView>
    <Component
      style={
        Object {
          "backgroundColor": "#FFF",
          "borderRadius": 6,
          "overflow": "hidden",
        }
      }
    >
      <Component
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 8,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "width": "80%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#000",
                "fontSize": 18,
                "fontWeight": "bold",
                "padding": 1,
              }
            }
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#000",
                "fontSize": 16,
              }
            }
          >
             - 
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "gray",
                "fontSize": 12,
              }
            }
          >
            sent_on
            1995-12-25 00:00:00
          </Text>
        </Component>
        <Component
          style={
            Object {
              "alignItems": "flex-end",
              "width": "20%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#2796ea",
                "fontSize": 10,
                "fontWeight": "bold",
                "paddingHorizontal": 3,
                "textAlign": "right",
              }
            }
          >
            0
          </Text>
        </Component>
      </Component>
      <Component
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#f5f5f5",
            "flexDirection": "column",
            "paddingHorizontal": 10,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "paddingTop": 5,
              "width": "100%",
            }
          }
        >
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#1F6CBC",
                    "borderRadius": 100,
                    "height": 36,
                    "justifyContent": "center",
                    "width": 36,
                  },
                ]
              }
            >
              <Image
                onLoad={[Function]}
                source={
                  Object {
                    "uri": "data:image/gif;base64,",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 100,
                      "height": 36,
                      "resizeMode": "cover",
                      "width": 36,
                    },
                    Object {
                      "display": "none",
                    },
                  ]
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "display": "flex",
                  }
                }
              />
            </Component>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#000",
                  "paddingHorizontal": 8,
                  "paddingVertical": 6,
                }
              }
            >
               
            </Text>
          </Component>
          <Component
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 3,
                    "flexDirection": "row",
                    "margin": 1,
                    "padding": 3,
                  },
                  Object {
                    "backgroundColor": "#E14333",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#fff",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  }
                }
              >
                lists_activity_due_date_overdue
              </Text>
            </Component>
          </Component>
        </Component>
        <Component
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "paddingTop": 5,
                "width": "100%",
              },
              Object {
                "paddingTop": 2,
              },
            ]
          }
        >
          <Component
            style={
              Object {
                "alignItems": "center",
                "display": "none",
              }
            }
          >
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingTop": 5,
                }
              }
            >
              <Icon
                allowFontScaling={false}
                name="check-circle"
                size={12}
                style={
                  Object {
                    "color": "#1FBC99",
                    "fontSize": 24,
                  }
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#1FBC99",
                      "justifyContent": "flex-start",
                      "paddingHorizontal": 8,
                      "paddingVertical": 6,
                    },
                    Object {
                      "color": "#1FBC99",
                    },
                  ]
                }
              >
                saved_on_Draft_new_activity_string
              </Text>
            </Component>
          </Component>
          <Component
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Icon
                allowFontScaling={false}
                color="#000"
                name="history"
                size={30}
                style={
                  Object {
                    "paddingLeft": 4,
                  }
                }
              />
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Icon
                allowFontScaling={false}
                color="#000"
                name="sticky-note-o"
                size={30}
                style={
                  Object {
                    "paddingLeft": 4,
                  }
                }
              />
            </TouchableOpacity>
          </Component>
        </Component>
      </Component>
    </Component>
  </CardView>
</TouchableOpacity>
`;

exports[`Component >>> ItemList Render ItemList 3`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <CardView>
    <Component
      style={
        Object {
          "backgroundColor": "#FFF",
          "borderRadius": 6,
          "overflow": "hidden",
        }
      }
    >
      <Component
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 8,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "width": "80%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#000",
                "fontSize": 18,
                "fontWeight": "bold",
                "padding": 1,
              }
            }
          >
            Case test
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#000",
                "fontSize": 16,
              }
            }
          >
            Process test
             - 
            task test
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "gray",
                "fontSize": 12,
              }
            }
          >
            sent_on
            2018-05-16 09:27:02
          </Text>
        </Component>
        <Component
          style={
            Object {
              "alignItems": "flex-end",
              "width": "20%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#2796ea",
                "fontSize": 10,
                "fontWeight": "bold",
                "paddingHorizontal": 3,
                "textAlign": "right",
              }
            }
          >
            1
          </Text>
        </Component>
      </Component>
      <Component
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#f5f5f5",
            "flexDirection": "column",
            "paddingHorizontal": 10,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "paddingTop": 5,
              "width": "100%",
            }
          }
        >
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#1F6CBC",
                    "borderRadius": 100,
                    "height": 36,
                    "justifyContent": "center",
                    "width": 36,
                  },
                ]
              }
            >
              <Image
                onLoad={[Function]}
                source={
                  Object {
                    "uri": "data:image/gif;base64,undefined",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 100,
                      "height": 36,
                      "resizeMode": "cover",
                      "width": 36,
                    },
                    Object {
                      "display": "none",
                    },
                  ]
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "display": "flex",
                  }
                }
              >
                D
              </Text>
            </Component>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#000",
                  "paddingHorizontal": 8,
                  "paddingVertical": 6,
                }
              }
            >
              Data Base
            </Text>
          </Component>
          <Component
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 3,
                    "flexDirection": "row",
                    "margin": 1,
                    "padding": 3,
                  },
                  Object {
                    "backgroundColor": "#E14333",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#fff",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  }
                }
              >
                lists_activity_due_date_overdue
              </Text>
            </Component>
          </Component>
        </Component>
        <Component
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "paddingTop": 5,
                "width": "100%",
              },
              Object {
                "paddingTop": 2,
              },
            ]
          }
        >
          <Component
            style={
              Object {
                "alignItems": "center",
                "display": undefined,
              }
            }
          >
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingTop": 5,
                }
              }
            >
              <Icon
                allowFontScaling={false}
                name="spinner"
                size={12}
                style={
                  Object {
                    "color": "#3397E1",
                    "fontSize": 24,
                  }
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#1FBC99",
                      "justifyContent": "flex-start",
                      "paddingHorizontal": 8,
                      "paddingVertical": 6,
                    },
                    Object {
                      "color": "#3397E1",
                    },
                  ]
                }
              >
                activity_lists_label_case_is_sending
              </Text>
            </Component>
          </Component>
          <Component
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Icon
                allowFontScaling={false}
                color="#000"
                name="history"
                size={30}
                style={
                  Object {
                    "paddingLeft": 4,
                  }
                }
              />
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Icon
                allowFontScaling={false}
                color="#000"
                name="sticky-note-o"
                size={30}
                style={
                  Object {
                    "paddingLeft": 4,
                  }
                }
              />
            </TouchableOpacity>
          </Component>
        </Component>
      </Component>
    </Component>
  </CardView>
</TouchableOpacity>
`;

exports[`Component >>> ItemList Render ItemList 4`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <CardView>
    <Component
      style={
        Object {
          "backgroundColor": "#FFF",
          "borderRadius": 6,
          "overflow": "hidden",
        }
      }
    >
      <Component
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 8,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "width": "80%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#000",
                "fontSize": 18,
                "fontWeight": "bold",
                "padding": 1,
              }
            }
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#000",
                "fontSize": 16,
              }
            }
          >
             - 
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "gray",
                "fontSize": 12,
              }
            }
          >
            sent_on
            1995-12-25 00:00:00
          </Text>
        </Component>
        <Component
          style={
            Object {
              "alignItems": "flex-end",
              "width": "20%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#2796ea",
                "fontSize": 10,
                "fontWeight": "bold",
                "paddingHorizontal": 3,
                "textAlign": "right",
              }
            }
          >
            0
          </Text>
        </Component>
      </Component>
      <Component
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#f5f5f5",
            "flexDirection": "column",
            "paddingHorizontal": 10,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "paddingTop": 5,
              "width": "100%",
            }
          }
        >
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#1F6CBC",
                    "borderRadius": 100,
                    "height": 36,
                    "justifyContent": "center",
                    "width": 36,
                  },
                ]
              }
            >
              <Image
                onLoad={[Function]}
                source={
                  Object {
                    "uri": "data:image/gif;base64,",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 100,
                      "height": 36,
                      "resizeMode": "cover",
                      "width": 36,
                    },
                    Object {
                      "display": "none",
                    },
                  ]
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "display": "flex",
                  }
                }
              />
            </Component>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#000",
                  "paddingHorizontal": 8,
                  "paddingVertical": 6,
                }
              }
            />
          </Component>
          <Component
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 3,
                    "flexDirection": "row",
                    "margin": 1,
                    "padding": 3,
                  },
                  Object {
                    "backgroundColor": "#E14333",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#fff",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  }
                }
              >
                lists_activity_due_date_overdue
              </Text>
            </Component>
          </Component>
        </Component>
        <Component
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "paddingTop": 5,
                "width": "100%",
              },
              Object {
                "paddingTop": 2,
              },
            ]
          }
        >
          <Component
            style={
              Object {
                "alignItems": "center",
                "display": "none",
              }
            }
          >
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingTop": 5,
                }
              }
            >
              <Icon
                allowFontScaling={false}
                name="check-circle"
                size={12}
                style={
                  Object {
                    "color": "#1FBC99",
                    "fontSize": 24,
                  }
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#1FBC99",
                      "justifyContent": "flex-start",
                      "paddingHorizontal": 8,
                      "paddingVertical": 6,
                    },
                    Object {
                      "color": "#1FBC99",
                    },
                  ]
                }
              >
                saved_on_Draft_new_activity_string
              </Text>
            </Component>
          </Component>
          <Component
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Icon
                allowFontScaling={false}
                color="#000"
                name="history"
                size={30}
                style={
                  Object {
                    "paddingLeft": 4,
                  }
                }
              />
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Icon
                allowFontScaling={false}
                color="#000"
                name="sticky-note-o"
                size={30}
                style={
                  Object {
                    "paddingLeft": 4,
                  }
                }
              />
            </TouchableOpacity>
          </Component>
        </Component>
      </Component>
    </Component>
  </CardView>
</TouchableOpacity>
`;
